# discordsc-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md  example.env  presence.json
data/: example.json
src/: config.rs  main.rs  types.rs  utility.rs
