[package]
name = "discordsc"
version = "1.0.0"
authors = ["Emily Maré (emileet) <emileet@plsnobully.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.9", features = ["blocking"] }
dotenv = "0.15.0"
json = "0.12.4"